--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "tsc": "tsc",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "start:client:webpack": "webpack-dev-server --inline --progress --port 8081",
-    "start:server:webpack": "webpack --config back/webpack.prod.js --watch & nodemon build/app.server.js $PORT $LOGS",
+    "start:server:webpack": "webpack --config back/webpack.prod.js & nodemon build/app.server.js $PORT $LOGS",
     "start:dev": "tsc && npm run start:client:webpack & npm run start:server:webpack",
     "build:client:webpack": "rimraf dist && webpack --config config/webpack.prod.js",
     "build:server:webpack": "rimraf build && webpack --config back/webpack.prod.js",
@@ -37,9 +37,10 @@
     "chalk": "1.1.3",
     "compression": "1.6.2",
     "core-js": "2.4.1",
+    "decode-google-map-polyline": "^1.0.1",
     "ejs": "2.5.6",
     "express": "^4.15.2",
-    "global": "^4.3.1",
+    "global": "^4.3.2",
     "jquery": "3.2.1",
     "jwt-simple": "0.5.1",
     "method-override": "2.3.8",
