--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "ts-node": "3.0.2",
     "tslint": "5.0.0",
     "typescript": "2.2.2",
-    "webpack": "2.3.2",
+    "webpack": "^2.6.1",
     "webpack-dev-server": "2.4.2",
     "webpack-merge": "4.1.0",
     "webpack-node-externals": "^1.5.4"
