--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongoose": "4.9.3",
     "morgan": "1.8.1",
     "oboe": "2.1.3",
+    "polyline": "^0.2.0",
     "request": "^2.81.0",
     "rxjs": "5.2.0",
     "serve-static": "^1.12.1",
